# PodInspector

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: docker.yml  docs.yml  helm.yml  python.yml  release.yml  scan.yml
Helm/LGTM/: values.yaml
Helm/PodInspector/: README.md  values.yaml
Helm/PodInspector/templates/: NOTES.txt  deployment.yaml  serviceaccount.yaml
Helm/k8s-monitoring/: values.yaml
app/: main.py  pyproject.toml
app/api/: routes.py
app/core/: logging_config.py  settings.py
app/services/: failure_simulator.py  kube_client.py  pods.py
app/tests/: test_health.py
charts/LGTM/: README.md  values.yaml
charts/PodInspector/: Chart.yaml  README.md  values.yaml
charts/PodInspector/templates/: NOTES.txt  _helpers.tpl  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
charts/Pyroscope/: README.md  values.yaml
charts/k8s-monitoring/: README.md
helm/PodInspector/: Chart.yaml  README.md  values.yaml
helm/PodInspector/templates/: clusterrole.yaml  deployment.yaml  service.yaml
tests/: test_main.http  test_ready.py
